--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/png" href="/favicon.png" />
   <link rel="apple-touch-icon" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>cyber0</title>
+  <title>منصة تعلم</title>
   <meta name="app-version" content="1.0.2-favicon" />
 </head>
 
