--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <link rel="icon" type="image/png" href="/favicon.png" />
   <link rel="apple-touch-icon" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>منصة تعلم</title>
-  <meta name="app-version" content="1.0.2-favicon" />
+  <title>قسم أمن المعلومات - University of Babylon</title>
+  <meta name="description"
+    content="Official learning platform for First Year Cybersecurity Students - University of Babylon.">
+  <meta name="app-version" content="1.1.0-release" />
 </head>
 
 <body>
