PWA Implementation: Enbaled Progressive Web App features

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>قسم أمن المعلومات - University of Babylon</title>
   <meta name="description"
     content="Official learning platform for First Year Cybersecurity Students - University of Babylon.">
+  <meta name="theme-color" content="#0a0f1c">
   <meta name="app-version" content="1.1.0-release" />
 </head>
 
